[tool.poetry]
name = "ginside"
version = "0.1.0"
description = ""
authors = ["0xDEAFBABE <deafbabe@startmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
databases = {extras = ["asyncpg"], version = "^0.6.1"}
fastapi = "^0.85.1"
orjson = "^3.8.0"
psycopg2-binary = "^2.9.4"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.42"
toml = "^0.10.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"

[tool.poetry.group.dev.dependencies]
async-asgi-testclient = "^1.4.11"
flake8 = "^5.0.4"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.1"
flake8-quotes = "^3.3.1"
pep8-naming = "^0.13.2"
pytest = "^7.1.3"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-xdist = "^3.0.2"
sqlalchemy-utils = "^0.38.3"

[tool.coverage.run]
omit = ["ginside/migrations"]

[tool.coverage.report]
exclude_lines = [
  "if 0:",
  "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
